# RustProjects

./: README.md
adder/src/: lib.rs
branches/src/: main.rs
closures/src/: main.rs
enums/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
functions/src/: main.rs
generic_data_types/src/: main.rs
guessing_game/src/: main.rs
hash_maps/src/: main.rs
lifetimes/src/: main.rs
matches/src/: main.rs
mean_median_mode/src/: main.rs
minigrep/src/: lib.rs  main.rs
pig_latin/src/: main.rs
rectangles/src/: main.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs
restaurant_seperate_files/: Cargo.toml
restaurant_seperate_files/src/: back_of_house.rs  lib.rs
slice/src/: main.rs
strings/src/: main.rs
structs/src/: main.rs
traits/src/: main.rs
variables/src/: main.rs
vectors/src/: main.rs
