[package]
name = "error_handling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# when a panic occurs, this makes it abort instead of unwinding and cleaning up the data
[profile.release]
panic = 'abort'